2011-10-13 belangeo <belangeo@gmail.com>

    * Added new objects : Touchin : Get the current value of the after-touch controller. Programin : Get the current value of a program change controller.
    - rev 730

2011-10-13 belangeo <belangeo@gmail.com>

    * Added new object : Bendin : Get the current value of the pitch bend controller.
    - rev 729

2011-10-12 belangeo <belangeo@gmail.com>

    * Added midi channel attributes to Midictl and Notein. Added setCentralKey(x) method to Notein.
    - rev 726

2011-10-05 belangeo <belangeo@gmail.com>

    * Added new object : Ceil : Returns the smallest integral value greater than or equal to the input signal.
    - rev 720

2011-10-02 belangeo <belangeo@gmail.com>

    * Added new object : MidiDelAdsr : Midi triggered ADSR envelope with pre-delay.
    - rev 719

2011-09-25 belangeo <belangeo@gmail.com>

    * Updated version number to 0.5.1.
    - rev 713

2011-08-13 belangeo <belangeo@gmail.com>

    * Added new object : CtlScan : Scan for Midi controller number in input.
    - rev 707

-------------------------------------------------------------------------------------

2011-07-31 belangeo <belangeo@gmail.com>

    * rev 702 - pyo 0.5.0 release.

2011-07-31 belangeo <belangeo@gmail.com>

    * Added new objects : NoteinRec and NoteinRead. Records and reads Notein automations.
    - rev 701

2011-08-30 belangeo <belangeo@gmail.com>

    * Added new object : WinTable. Generates different kind of windowing functions. 
    - rev 700

2011-07-22 belangeo <belangeo@gmail.com>

    * Added new function : reducePoints(), apply a Douglas–Peucker curve reduction algorithm. 
      Added loadRecFile() method to table objects.
    - rev 688

2011-07-20 belangeo <belangeo@gmail.com>

    * Added new objects : ControlRec and ControlRead. Records automations at user-defined sampling rate.
    - rev 687

2011-07-18 belangeo <belangeo@gmail.com>

    * Added C impementation of the Looper object.
    - rev 682
