@@ -43,6 +43,7 @@
 #define TYPE_O_IF "O|if"
 #define TYPE_S_IFF "s|iff"
 #define TYPE_S_FIFF "s|fiff"
+#define TYPE_S_FFIFF "s|ffiff"
 #define TYPE_S__OIFI "s|Oifi"
 #define TYPE__FFFOO "|fffOO"
 #define TYPE__FFFIOO "|fffiOO"
@@ -109,6 +110,7 @@
 #define TYPE_O_IF "O|id"
 #define TYPE_S_IFF "s|idd"
 #define TYPE_S_FIFF "s|didd"
+#define TYPE_S_FFIFF "s|ddidd"
 #define TYPE_S__OIFI "s|Oidi"
 #define TYPE__FFFOO "|dddOO"
 #define TYPE__FFFIOO "|dddiOO"
